<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_create_new_tax_name"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="25"
            android:id="@+id/CreateTaxDialogNameEditText"
            android:imeOptions="actionNext"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_create_new_tax_value_until_1h"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/CreateTaxDialogUntil1h"
            android:inputType="number"
            android:imeOptions="actionNext"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_create_new_tax_value_from_1h_to_4h"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/CreateTaxDialogFrom1To4h"
            android:inputType="number"
            android:imeOptions="actionNext"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_create_new_tax_value_from_4h_to_8h"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/CreateTaxDialogFrom4hTo8h"
            android:inputType="number"
            android:imeOptions="actionNext"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_create_new_tax_value_after_8h"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/CreateTaxDialogAfter8h"
            android:inputType="number"
            android:imeOptions="actionDone"/>
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ativar!"
        android:id="@+id/CreateTaxDialogCheckBox"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>